# distributedMathArh

./: .gitignore  AMQPConsumerServiceTests_8cpp.html  AMQPConsumerServiceTests_8cpp.js  AMQPConsumerServiceTests_8cpp__incl.map  AMQPConsumerServiceTests_8cpp__incl.md5  AMQPConsumerServiceTests_8cpp_a462da7d6d85eb7c66e5b5e37f51b906e_cgraph.map  AMQPConsumerServiceTests_8cpp_a462da7d6d85eb7c66e5b5e37f51b906e_cgraph.md5  AMQPConsumerServiceTests_8cpp_ae962b2d910fa60369e6a9f5c959e1b63_cgraph.map  AMQPConsumerServiceTests_8cpp_ae962b2d910fa60369e6a9f5c959e1b63_cgraph.md5  AMQPConsumerServiceTests_8cpp_afd5926ea19c2f87e2344252f1594baa8_cgraph.map  AMQPConsumerServiceTests_8cpp_afd5926ea19c2f87e2344252f1594baa8_cgraph.md5  AMQPConsumerService_8cpp.html  AMQPConsumerService_8cpp__incl.map  AMQPConsumerService_8cpp__incl.md5  AMQPConsumerService_8h.html  AMQPConsumerService_8h.js  AMQPConsumerService_8h__dep__incl.map  AMQPConsumerService_8h__dep__incl.md5  AMQPConsumerService_8h__incl.map  AMQPConsumerService_8h__incl.md5  AMQPConsumerService_8h_source.html  AMQPPublisherService_8cpp.html  AMQPPublisherService_8cpp__incl.map  AMQPPublisherService_8cpp__incl.md5  AMQPPublisherService_8h.html  AMQPPublisherService_8h.js  AMQPPublisherService_8h__dep__incl.map  AMQPPublisherService_8h__dep__incl.md5  AMQPPublisherService_8h__incl.map  AMQPPublisherService_8h__incl.md5  AMQPPublisherService_8h_source.html  AMQPPublisherTests_8cpp.html  AMQPPublisherTests_8cpp.js  AMQPPublisherTests_8cpp__incl.map  AMQPPublisherTests_8cpp__incl.md5  AMQPPublisherTests_8cpp_a36e46f87acb810ba452b4011189b3030_cgraph.map  AMQPPublisherTests_8cpp_a39e6c17005d630c6235884cdc4cb1438_cgraph.md5  AMQPPublisherTests_8cpp_a9a9548c59335fe4929e31fd4cc212c68_cgraph.map  AMQPPublisherTests_8cpp_a9a9548c59335fe4929e31fd4cc212c68_cgraph.md5  AbstractSubsriber_8cpp.html  (+3254 more)
Boost_tests/: BoostTestCommon.h  CMakeLists.txt  ClockArrayTests.cpp  ClockTests.cpp  DipolesTests.cpp  PrintUtilsTest.cpp  SpeedTests.cpp  TestRunnerTests.cpp  install.md  test1.cpp
Boost_tests/common/: PrintUtilsTest.cpp
Boost_tests/interfaces/: PubSubModelTests.cpp
Boost_tests/math_core/: SpeedTests.cpp  TestRunnerTests.cpp
Boost_tests/parallelUtils/: ClockArrayTests.cpp  ClockTests.cpp
GSLTest/: CMakeLists.txt  main.cpp
Google_tests/: CMakeLists.txt  GoogleCommon.h  install.md  test1.cpp
Google_tests/common/: PrintUtilsTest.cpp
Google_tests/interfaces/: PubSubModelTests.cpp  mocks.h
Google_tests/math_core/: SpeedTests.cpp
Google_tests/parallelUtils/: ClockTests.cpp
application/: CMakeLists.txt  Dipoles.h  Dipoles.txtc  Dipoles2.h  MeshProcessor.cpp  MeshProcessor.h  TestRunner.cpp  TestRunner.h  clockTest.cpp  configReader.cpp  coordGenerate.cpp  darwingGrids.cpp  eigenTest.cpp  gausTets.cpp  lib.h  main.cpp  moveDipoles.cpp  printUtils.h  todo.md
application/common/: Generator.cpp  Generator.h  Parsers.cpp  Parsers.h  Printers.h  commonLib.h  constants.h  lib.h  my_consepts.h  printUtils.h  randomUtils.h
application/commonFunctions/: lib.h
application/interfaces/: AbstractSubsriber.cpp  AbstractSubsriber.h  CalculationStep.cpp  CalculationStep.h  DataAcessInteface.cpp  DataAcessInteface.h  IOSub.cpp  IOSub.h  InitCalc.cpp  InitCalc.h  interlib.h
application/math_core/: Dipoles.cpp  Dipoles.h  Generator.h  MeshProcessor.h  TestRunner.cpp  TestRunner.h  const.h  math_core.h
application/parallelUtils/: OpenmpParallelClock.h  OpenmpParralelClock.cpp  clockArray.cpp  clockArray.h
client/: CMakeLists.txt
client/include/: MeshPlot.h  plotingUtils.h  surfacegraph.h
client/lib/: MeshPlot.cpp  plotingUtils.cpp  surfacegraph.cpp
client/src/: avgsTest.cpp  coordGenerate.cpp  createPlotQt.cpp  darwingGrids.cpp  eigenTest.cpp  requestInformation.cpp
computationalLib/: CMakeLists.txt
computationalLib/include/iolib/: Parsers.h  Printers.h
computationalLib/include/math_core/: Dipoles.h  dipolesCommon.h  math_core.h
computationalLib/include/network_shared/: AMQPConsumerService.h  AMQPPublisherService.h  DbService.h  amqpCommon.h  amqpRestService.h  connectionString.h  daoClasses.h  dbCommon.h  networkTypes.h  restUtils.h  sharedConstants.h
computationalLib/lib/iolib/: Printers.cpp
computationalLib/src/: printersTests.cpp
computationalLib/test/: BenchmarkHandler.h  CMakeLists.txt  GoogleCommon.h  benchmark.cpp  benchmarkHandler.cpp  benchmarkHandler.h  fileHandler.cpp  fileHandler.h  install.md
computationalNode/: CMakeLists.txt  main.cpp
computationalNode/config/: server_config.json
computationalNode/src/: MeshProcessor.cpp  configReader.cpp  coordGenerate.cpp  darwingGrids.cpp  eigenTest.cpp  gausTets.cpp  main.cpp  moveDipoles.cpp  printersTests.cpp
computationalNode/test/: BenhcmarkRunnerBenchs.cpp  CMakeLists.txt  GoogleCommon.h  benchmark.cpp  benchmarkHandler.cpp  benchmarkHandler.h  fileHandler.cpp  fileHandler.h  install.md  simplePerExample.cpp  test1.cpp
doc/: Arhitecture.md  BenchData.md  CMakeLists.txt  DevStatus.md  DocPage.md  Doxyfile.in  Metrics.md  QualitivePractises.md  Stack.md  Tasks.md
doc/drawio/: SetCompTaskArh(RU).drawio  benchmVis.drawio  ciSchemev2.drawio
doc/md/: doxygen_dummy.h  mainpage.md
doc/mermaid/: TaskState.m  dependencyList.m
mainNode/: CMakeLists.txt  aqmpCons.cpp  aqmpProd.cpp  main.cpp
mainNode/config/: server_config.json
mainNode/include/: amqpCommon.h  amqpRestService.h  restUtils.h
mainNode/src/: amqpCommon.cpp  amqpRestService.cpp  restUtils.cpp
mainNode/test/: CMakeLists.txt  RabbitMQRestServiceTest.cpp  rabbitMQRestServiceTest.cpp
mainNode/test/mappings/: queues.json  (+1 more)
server/: CMakeLists.txt  client.cpp  main.cpp  server.cpp  server2.cpp  server3.cpp
server/controller/: calculationsController.cpp  calculationsController.h
server/service/: calculationsService.cpp  calculationsService.h
somestuff/: CMakeLists.txt  nested_template.cpp  nested_template.h  test1.cpp  test2.cpp  test3.cpp
utilLib/: CMakeLists.txt
utilLib/lib/: HashUtils.cpp  clockArray.cpp  myConcepts.cpp
utilLib/src/: eigenTest.cpp
utilLib/test/: CMakeLists.txt  GoogleCommon.h
(+383 files in other folders)
